[metadata]
name = lspopt
version = attr: lspopt.__version__.__version__
description = A Python implementation of a multitaper window method for estimating Wigner spectra for certain locally stationary processes
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
author = Henrik Blidh
author_email = henrik.blidh@gmail.com
url = https://github.com/hbldh/lspopt
license = MIT
keywords = Mathematical Statistics, Multitaper, Spectrogram
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.9
packages = find:
install_requires =
    numpy>=1.21.6
    scipy>=1.7.3
include_package_data = True

[options.extras_require]
test =
    pytest

[options.package_data]
lspopt.data = *.npy

[options.packages.find]
exclude =
    tests